# python-verbio-speech-center

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  DESCRIPTION.md  LICENSE  MODELS_VERSION  Makefile  README.md  VERSION  asr4_config.toml  asr4_streaming_config_en-us.toml  asr4_streaming_config_es.toml  asr4_streaming_config_pt-br.toml  buf.gen.yaml  cli-client.py  pyproject.toml  release.toml  requirements-dev.txt  requirements.client.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
.gitlab/: changelog_config.yml
.gitlab/merge_request_templates/: Default.md  major-change.md  minor-change.md  patch-change.md
asr4/: __init__.py
asr4/recognizer/: __init__.py
asr4/recognizer_v1/: __init__.py  async_service.py  formatter.py  loggerService.py  server.py  service.py
asr4/recognizer_v1/runtime/: __init__.py  onnx.py  w2l_decoder.py
asr4/recognizer_v1/types/: __init__.py  asr4_pb2.py  asr4_pb2_grpc.py  audio_chunking.py  audio_encoding.py  audio_multibatching.py  language.py  sample_rate.py
asr4/types/: language.py
asr4_streaming/: __init__.py
asr4_streaming/recognizer/: __init__.py
asr4_streaming/recognizer_v1/: __init__.py  formatter.py  handler.py  loggerService.py  server.py  service.py
asr4_streaming/recognizer_v1/runtime/: __init__.py  base.py  onnx.py
asr4_streaming/recognizer_v1/types/: __init__.py  asr4_pb2.py  asr4_pb2_grpc.py  audio_encoding.py
cli-client/: common.py  list_voices.py  recognizer.py  recognizer_stream.py  speechcenterauth.py  synthesizer.py  synthesizer_demo.py  synthesizer_grpc.py  synthesizer_stream.py
cli-client/helpers/: audio_exporter.py  audio_importer.py  common.py  compiled_grammar_processing.py  csr_client.py  csr_gui.py  grpc_connection.py  speechcenterauth.py  tts_client.py
cmake/: package.cmake
deploy/docker/: Dockerfile-python-3.7.base  Dockerfile-python-3.9.base  Dockerfile.base  Dockerfile.debian  Dockerfile.debian-gpu  amazon_login.sh  init-gpu.sh  init.sh
deploy/nomad/: asr4-stable-gpu.nomad  asr4-stable.nomad  asr4-staging-gpu.nomad  asr4-staging.nomad  asr4.nomad  envoy-stable.yaml  envoy-staging.yaml  envoy.yaml
proto/: asr4.proto  recognition.proto  recognition_streaming_request.proto  recognition_streaming_response.proto  texttospeech-test.proto  verbio-speech-center-recognizer.proto  verbio-speech-center-synthesizer.proto
proto/google/protobuf/: duration.proto
proto/google/rpc/: status.proto
scripts/: generate_grpc_code.py  generate_grpc_code.sh
speechcenter/recognizer/: audio.py  authentication.py  cli-client.py  credentials.py  options.py  recognizer.py  recognizer_stream.py
speechcenter/synthesizer/: synthesizer.py
src/: generate_grpc_code.sh  verbio-speech-center.proto
src/cli-client/: cli-client.py  cli_client.py  recognizer.py  synthesizer.py  verbio-speech-center-recognizer.proto  verbio-speech-center-synthesizer.proto  verbio-speech-center.proto
src/cli-client/test/: test_speech_center_client.py
test/: __init__.py  test_csr_client.py  test_grpc_channel.py  test_speech_center_client.py  test_tts_client.py  tts_mocks.py
tests/: test_hello_world.py
tests/e2e/: metrics.py  run_batch_recognition.sh  run_metrics.sh
tests/e2e/data/: domains.json  domains_en-us.txt  domains_es.txt  domains_pt-br.txt  expected_metrics.json  expected_metrics_functional_testing.json  test_en-us.gui  test_en-us_upgraded-20w.gui  test_en-us_upgraded-small.gui  test_en-us_upgraded.gui  test_es-co.gui  test_es-es.gui  test_es-mx.gui  test_es-pe.gui  test_es-us.gui  test_es.gui  test_es_upgraded-fmt.gui  test_es_upgraded.gui  test_pt-br.gui  test_pt-br_upgraded.gui
tests/functional/: launch_server.sh  recognizer_service_test_case.py  streaming_tests.sh  test_basic_requests.py  test_edge_cases.py  test_local_decoding.py  test_long_files.py  test_multichannel_audios.py  test_recognizer_service.py  test_recognizer_service_with_client.py  test_streaming_requests.py
tests/functional/data/: asr4_streaming_config_en-us.toml  asr4_streaming_config_es.toml  asr4_streaming_config_pt-br.toml  en-us.gui  es.gui  pt-br-3.txt  pt-br.gui  streaming_test_configuration.toml  streaming_test_requests.4.json  streaming_test_requests.8.json  streaming_test_requests.error1.json  streaming_test_requests.error2.json  streaming_test_requests.error3.json  streaming_test_requests.noheader.json  streaming_test_requests.reconfig.json
tests/functional_partial/: test_recognizer_service.py
tests/integration/: launch_server.sh  test_formatter.py  test_recognizer_service.py
tests/integration/data/: asr4_streaming_config_en-us.toml  asr4_streaming_config_es.toml  asr4_streaming_config_pt-br.toml  en-us-2.txt  en-us-3.txt  en-us-fmt.txt  en-us-no-fmt.txt  en-us.16k.txt  en-us.gui  en-us.txt  es-1.txt  es-2.txt  es-3.txt  es-fmt.txt  es-no-fmt.txt  es.16k.txt  es.gui  es.txt  pt-br-fmt.txt  pt-br-no-fmt.txt  pt-br.16k.txt  pt-br.gui  pt-br.txt
tests/unit/: test_audio_chunking.py  test_audio_encoding.py  test_client.py  test_event_handler.py  test_formatter.py  test_language.py  test_logger_service.py  test_matrix_operations.py  test_onnx_runtime.py  test_recognizer_service.py  test_run_metrics.py  test_sample_rate.py  test_server.py  test_service.py  test_w2l_decoder.py
tests/unit/data/: audios.gui  en-us_lm.lexicon.txt  expected_metrics.json  mnist-12-float16.onnx  mnist-12-int8.onnx  mnist-12-uint8.onnx  test_es_oov.json  test_es_results.tsv
tests/unit/data/test_es_intratest/: dialects_intratest.json  domains_intratest.json
