[package]
name = "asr4"
version = "0.2.9"
authors = ["Jordi Adell <jadell@verbio.com>", "Leo Fanzeres <lfanzeres@verbio.com>", "Lluís Formiga <lformiga@verbio.com>", "Lara Gil <lgil@verbio.com>", "Pere Comas <pcomas@verbio.com>", "Vero Lopez <vlopez@verbio.com>", "Roger Marrugat <rmarrugat@verbio.com>" ]
edition = "2021"
publish = false

[package.metadata.release]
pre-release-replacements = [
    {file="CMakeLists.txt", search="        VERSION .*", replace="        VERSION {{version}}"},
    {file="VERSION", search=".*", replace="{{version}}"}
]


[dependencies]
