[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asr4"
dynamic = ["readme", "description", "version"]
requires-python = ">=3.7,!=3.11"
keywords = ["ASR", "CSR"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Natural Language :: Spanish",
    "Natural Language :: Portuguese (Brazilian)",
    "License :: Other/Proprietary License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "protobuf >= 3.20.1",
    "google >= 3.0.0",
    "google-api-core >= 2.10.2",
    "grpcio >= 1.47.0",
    "typing_extensions >= 4.3.0",
    "logger >= 1.4",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
asr4 = ["../DESCRIPTION.md", "../VERSION"]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
description = {file = ["DESCRIPTION.md"]}
version = {file = ["VERSION"]}

[project.optional-dependencies]
client = [
    "numpy >= 1.21.4",
    "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/6806194d888066cea249b3d50c4d3c26c6bcdc2d95da45ec468f19dc6e29a5e7/csr_evaluation_tools-0.0.8-py37-none-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
    "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/5d4e676e45363352003ddb3a53a20f7a8e17dbb43bfed81002d16fdbc64ec372/csr_evaluation_tools-0.0.8-py38-none-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
    "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/7f3575fc0a7abdf08bd58fc44d428f2a8b71a489058b749dcd0c89fdaa03fce2/csr_evaluation_tools-0.0.8-py39-none-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
    "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/ce1ef19ee863b619e4ebeb0a139a7e2b51177fdf9958012a6467c639ff143947/csr_evaluation_tools-0.0.8-py310-none-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
]
server = [
    "resampy >= 0.4.2",
    "grpcio-health-checking >= 1.47.0",
    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/dd9cfb194c7c3c4652e1a320dfadf71d00db75c3081aa554f3b31bc4faf9f4b0/pyformatter-1.3.11-cp311-cp311-linux_x86_64.whl ; python_version=='3.11' and platform_system=='Linux'",
    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/789824799d8386891c8dfefd81968d714eaa804eb5a3c43d32b996c37a091f99/pyformatter-1.3.11-cp310-cp310-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/171256e80601d9542833c68b4245cd6b089c5eeabdde630f3385b93d4a8909aa/pyformatter-1.3.11-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/c2efb5f5335d12f986c6eac5dd6532cc41779b0b544e2705f24b9c2763d20014/pyformatter-1.3.11-cp38-cp38-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/9d7278a1d271c73e1879a8d9e0d1981fbc998625bb3bee68584c0f620a537012/pyformatter-1.3.11-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/7c7b0b4600cf3d5b40d2383ea7c1af31a65940c2cd55df9e88517f5f27bc6ce3/pyformatter-1.3.11-cp36-cp36m-linux_x86_64.whl ; python_version=='3.6' and platform_system=='Linux'", ]
cpu = [
    "torch @ https://__token__:glpat-r_85xcYsQCiEX7aMNPPa@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/6f9d5fed8d2b3190284820e17c8738e4e8f274a5d3c94958ef91b23f2c161cbf/torch-1.12.0a0+git8c5c07c-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
    "torch @ https://__token__:glpat-r_85xcYsQCiEX7aMNPPa@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/801f0065742f896f3aefd2d4d745e168f39586e61e07134d7df45b0ce153a98f/torch-1.12.0a0+git8c5c07c-cp39-cp39-linux_x86_64.whl  ; python_version=='3.9' and platform_system=='Linux'",
    "onnxruntime-dnnl @ https://__token__:glpat-wPfyyLYAyyXSEEzXVB-7@gitlab.lan.verbio.com/api/v4/projects/1436/packages/pypi/files/f2aeb33fb4918ce85757c67711a153072302d5d81c7a5a9fb3666f4e49232042/onnxruntime_dnnl-1.14.0-cp36-cp36m-linux_x86_64.whl ; python_version=='3.6' and platform_system=='Linux'",
    "onnxruntime-dnnl @ https://__token__:glpat-wPfyyLYAyyXSEEzXVB-7@gitlab.lan.verbio.com/api/v4/projects/1436/packages/pypi/files/4610cf890d19533ddc591a909c8eb4c30a0fc51c1ed11d192a50a14d18656ed7/onnxruntime_dnnl-1.14.0-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
    "onnxruntime-dnnl @ https://__token__:glpat-wPfyyLYAyyXSEEzXVB-7@gitlab.lan.verbio.com/api/v4/projects/1436/packages/pypi/files/977077043665d153f8967d972a2efe2dee81eb6875112e0bf519eea4f1fce1ee/onnxruntime_dnnl-1.14.0-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
    "numpy @ https://pypi.anaconda.org/intel/simple/numpy/1.21.4/numpy-1.21.4-16-cp37-cp37m-manylinux2014_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
    "numpy @ https://pypi.anaconda.org/intel/simple/numpy/1.22.3/numpy-1.22.3-0-cp39-cp39-manylinux2014_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
    "simple-ctc @ https://__token__:glpat-r_85xcYsQCiEX7aMNPPa@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/bb97a7c34233d35c229010dbe3cc87f1164b3deb7275af63e4adf1f11e93146d/simple_ctc-0.0.1-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
    "simple-ctc @ https://__token__:glpat-r_85xcYsQCiEX7aMNPPa@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/979254bbdf08384b5d9aa2b7574925888df1210a4c28c399615cfb1fe1f4fdca/simple_ctc-0.0.1-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
]
gpu = [
    "torch == 1.12.0a0+git8c5c07c",
    "onnxruntime-gpu >= 1.12.1",
    "simple-ctc @ git+https://github.com/mthrok/ctcdecode@b1a30d7a65342012e0d2524d9bae1c5412b24a23",
]
test = [
    "pytest >= 6.2.5",
    "pytest-cov >= 3.0.0",
    "jiwer >= 2.5.1"
]