[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asr4-streaming"
dynamic = ["readme", "description", "version"]
requires-python = ">=3.7,!=3.11"
keywords = ["ASR", "CSR"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "Natural Language :: Spanish",
    "Natural Language :: Portuguese (Brazilian)",
    "License :: Other/Proprietary License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "protobuf >= 3.20.1",
    "google >= 3.0.0",
    "google-api-core >= 2.10.2",
    "grpcio >= 1.47.0",
    "typing_extensions >= 4.3.0",
    "logger >= 1.4",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
asr4_streaming = ["../DESCRIPTION.md", "../VERSION"]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
description = {file = ["DESCRIPTION.md"]}
version = {file = ["VERSION"]}

[project.optional-dependencies]
client = [
    "numpy >= 1.21.4",
    "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/f8d8063889d24bdd07edfae5e5c189f5dbb26c38f3c8ab2d76c4268d149f6cc7/csr_evaluation_tools-0.0.22-py37-none-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
    "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/734c88c08f37f4bcc0d85121fd6bbb1badc2bcd54b24f5d7d9ffe8dbecffa1bd/csr_evaluation_tools-0.0.22-py38-none-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
    "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/80e98be34e5798c3c2ac410b1f9696216aaed413cda01213c5a207b286317d6b/csr_evaluation_tools-0.0.22-py39-none-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
    "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/0f6bbb9642c692941c7e6e4de52c9d356bcf090f2d4eb17a6c3e63f09c9a1396/csr_evaluation_tools-0.0.22-py310-none-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
]
server = [
    "toml >= 0.10.2",
    "soxr >= 0.3.3",
    "sox >= 1.4.1",
    "scipy >= 1.10.0",
    "grpcio-health-checking >= 1.47.0",
]
cpu = [
    "asr4-engine-wav2vec[cpu,decoder,formatter] @ https://__token__:glpat-REETc2aBAZBgzuD5hu2j@gitlab.lan.verbio.com/api/v4/projects/1560/packages/pypi/files/7af9a049a730215c9bac5dc07785321e7d43f14ca5d89b3bd4799979024fe486/asr4_engine_wav2vec-0.6.14-py3-none-any.whl"
]
gpu = [
    "asr4-engine-wav2vec[gpu,decoder,formatter] @ https://__token__:glpat-REETc2aBAZBgzuD5hu2j@gitlab.lan.verbio.com/api/v4/projects/1560/packages/pypi/files/7af9a049a730215c9bac5dc07785321e7d43f14ca5d89b3bd4799979024fe486/asr4_engine_wav2vec-0.6.14-py3-none-any.whl"
]
test = [
    "pytest >= 6.2.5",
    "pytest-cov >= 3.0.0",
    "jiwer >= 2.5.1"
]